# fabioluciano.dev

./: .gitignore  .releaserc  CNAME  Makefile  README.md  index.html
.github/actions/setup-typst-fonts/: action.yaml
.github/workflows/: build-and-push.yaml  gpt-translate.yaml  semantic-release.yaml  validation.yaml
assets/: site.webmanifest
data/: common.yaml  resume.en.yaml  resume.ptbr.yaml
en/: index.html
scripts/: validate_resume.py
src/: docinfo-footer.html  docinfo.html  resume-en.adoc  resume-ptbr.adoc  variables.adoc
src-typ/: academic.typ  introduction.typ  lib.typ  main.typ  professional-experiences.typ  technical-skills.typ
src-typ/data/: academic.yaml  certifications.yaml  languages.yaml  professional-experience.yaml  resume.yaml
src/python/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/python/libs/: csv_writter.py  github_client.py  template.py
src/python/template/: repositories-list.adoc.jinja2
src/resources/themes/: default-theme.yml
src/sections/en/: certifications.adoc  cover-letter.adoc  education.adoc  opensource.adoc  personal-information.adoc  professional-experience.adoc  technical-skills.adoc
src/sections/ptbr/: certifications.adoc  cover-letter.adoc  education.adoc  opensource.adoc  personal-information.adoc  professional-experience.adoc  technical-skills.adoc
templates/: data-loader.typ  design.typ  filters.typ  i18n.typ  resume-full.typ  resume-html.typ  resume-onepage.typ  styles-html.css
templates/components/: cards.typ  experience.typ  header.typ  k8s-highlight.typ  section.typ
