[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Fábio Luciano <fabio@naoimporta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.57"
Jinja2 = "^3.1.2"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
